lib/src/compiler/tests/testdata/errors/3.out
error[E100]: wrong type
 --> line:2:18
  |
2 |   condition: 1 + "1" == 2
  |                  ^^^ expression should be `float` or `integer`, but is `string`
  |